--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://i.imgur.com/tgO9UXR.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/282736/1693316679/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
