--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>Nosencotramos Discgretas</title>
-<meta content='https://i.imgur.com/f5LH5FX.png' property='og:image'/>
+<meta content='https://i.postimg.cc/50CBb2h8/UozxyQY.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -61,7 +61,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/282736/1693316679/images/4.mp4" type="video/mp4">
+<source src="https://cdn-ath.akamaized.net/landings/269558/1645442158/images/video.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
