--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Salidas Err(o)ticas</title>
-<meta content='https://i.postimg.cc/8PQxGMZH/UozxyQY.png' property='og:image'/>
+<title>S(a)lidas Disc(r)etas</title>
+<meta content='https://i.postimg.cc/Y9mrnFps/Whats-App-Image-2023-10-09-at-10-26-31-AM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
