--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>S(a)lidas Disc(r)etas</title>
-<meta content='https://i.postimg.cc/Y9mrnFps/Whats-App-Image-2023-10-09-at-10-26-31-AM.jpg' property='og:image'/>
+<meta content='https://i.postimg.cc/B6R1Nscs/UozxyQY.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
