--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>S(a)lidas Disc(r)etas</title>
+<title>F0t0ss Er0t1c@s</title>
 <meta content='https://i.postimg.cc/B6R1Nscs/UozxyQY.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -61,7 +61,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-ath.akamaized.net/landings/269558/1645442158/images/video.mp4" type="video/mp4">
+<source src="https://cdn.jmp-assets.com/assets/3305/video/1.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
