--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn.jmp-assets.com/assets/3305/video/1.mp4" type="video/mp4">
+<source src="https://i.imgur.com/i10qYBT.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
